--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,6 +20,18 @@
     <h1>Welcome to NotFB, {{ current_user.username }}!</h1>
     <p>Role: {{ current_user.role }}</p>
     <a href="{{ url_for('logout') }}">Logout</a>
+
+    <div class="add-friends-container">
+
+      <h2>Users:</h2>
+      <ul>
+          {% for user in users %}
+              <li>
+                  <a href="{{ url_for('profile.view_profile', username=user.username) }}">{{ user.username }}</a>
+              </li>
+          {% endfor %}
+      </ul>
+  </div>
   {% endblock %}
 
 </body>
