--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Raleway', "Trebuchet MS", sans-serif;
+  overflow-y: auto;
 }
 
 .profile-container {
@@ -11,6 +12,8 @@ body {
   box-shadow: 0 2px 8px rgba(0,0,0,0.2);
   border-radius: 8px;
   overflow: hidden;
+  position: relative;
+  min-height: 100vh;
 }
 
 /* Cover Photo */
