--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,35 +4,51 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Google Fonts (optional) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="static/css/dashboard.css">
-  <title>Dashboard</title>
+  <!-- Your dashboard CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
+
+  <title>Dashboard - Not FaceBook</title>
 </head>
 <body>
-  {% extends 'base.html' %}
 
-  {% block title %}Dashboard - Not FaceBook{% endblock %}
+  <nav>
+    <ul>
+    <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+    <li><a href="{{ url_for('profile.view_profile', username=current_user.username) }}">Profile</a></li>
+    <li><a href="{{ url_for('friends.friends') }}">Friends</a></li>
+    <l1><a href="{{ url_for('friends.incoming_requests') }}">Friend Requests</a>
+    </l1>
+    <li class="nav-right"><a href="{{ url_for('logout') }}">Logout</a></li>
+</ul>
+</nav>
 
-  {% block content %}
-    <h1>Welcome to NotFB, {{ current_user.username }}!</h1>
-    <p>Role: {{ current_user.role }}</p>
-    <a href="{{ url_for('logout') }}">Logout</a>
+  <h1>Welcome to NotFB, {{ current_user.username }}!</h1>
+  <p>Role: {{ current_user.role }}</p>
+  <!-- <a href="{{ url_for('logout') }}">Logout</a> -->
 
-    <div class="add-friends-container">
+  <div class="add-friends-container">
+    <h2>Users:</h2>
 
-      <h2>Users:</h2>
-      <ul>
-          {% for user in users %}
-              <li>
-                  <a href="{{ url_for('profile.view_profile', username=user.username) }}">{{ user.username }}</a>
-              </li>
-          {% endfor %}
-      </ul>
+    <div class="profiles-container">
+      {% for user in users %}
+        <div class="profile">
+          <!-- <img class="pfp" src="{{ url_for('static', filename='profile_pictures/' + (user.profile_picture or 'default.png')) }}" alt="{{ user.username }}"> -->
+          <img class="pfp" src="{{ url_for('static', filename='profile_pics/' + user.profile_picture or default('default.png')) }}" alt="{{ user.username }}">
+
+          <p class="name">{{ user.username }}</p>
+          <p class="mutual-friends">{{ user.mutual_friends }} mutual friends</p>
+          <button class="add-friend">Add Friend</button>
+        </div>
+      {% else %}
+        <p>No users available.</p>
+      {% endfor %}
+    </div>
   </div>
-  {% endblock %}
-
 </body>
 </html>
