--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,11 @@ body{
   font-family: 'Raleway', "Trebuchet MS", sans-serif;
   line-height: 1.6;
   height: 100vh;
-  /* overflow: hidden; */
+  padding: 7px;
+  background-image: linear-gradient(to bottom right, #9e22cb, #1e029a, #dc0cd2, #470c98, #1e029a);
+  margin: 0;
+  padding: 0;
+  color: black;
 }
 
 .title-header {
@@ -16,7 +20,14 @@ body{
 
 nav {
   background-color: rgb(236, 237, 229);
+  background: rgba(0, 0, 0, 0.7); 
   padding: 10px 20px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  padding: 15px 40px;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
 nav ul {
@@ -33,7 +44,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: black;
+  color: rgb(197, 243, 245);
   text-decoration: none;
   padding: 10px 15px;
   display: block;
