--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,36 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- Google Fonts (optional) -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+{% extends 'base.html' %}
 
-  <!-- Your dashboard CSS -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
-
-  <title>Dashboard - Not FaceBook</title>
-</head>
-<body>
-
-  <nav>
-    <ul>
-    <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
-    <li><a href="{{ url_for('profile.view_profile', username=current_user.username) }}">Profile</a></li>
-    <li><a href="{{ url_for('friends.friends') }}">Friends</a></li>
-    <l1><a href="{{ url_for('friends.incoming_requests') }}">Friend Requests</a>
-    </l1>
-    <li class="nav-right"><a href="{{ url_for('logout') }}">Logout</a></li>
-</ul>
-</nav>
-
-  <h1>Welcome to NotFB, {{ current_user.username }}!</h1>
+{% block content %}
+  <h1 class="dashboard-header">Welcome to NotFB, {{ current_user.username }}!</h1>
   <p>Role: {{ current_user.role }}</p>
-  <!-- <a href="{{ url_for('logout') }}">Logout</a> -->
 
   <div class="add-friends-container">
     <h2>Users:</h2>
@@ -38,8 +10,9 @@
     <div class="profiles-container">
       {% for user in users %}
         <div class="profile">
-          <!-- <img class="pfp" src="{{ url_for('static', filename='profile_pictures/' + (user.profile_picture or 'default.png')) }}" alt="{{ user.username }}"> -->
-          <img class="pfp" src="{{ url_for('static', filename='profile_pics/' + user.profile_picture or default('default.png')) }}" alt="{{ user.username }}">
+          <img class="pfp"
+               src="{{ url_for('static', filename='profile_pics/' + (user.profile_picture or 'default.png')) }}"
+               alt="{{ user.username }}">
 
           <p class="name">{{ user.username }}</p>
           <p class="mutual-friends">{{ user.mutual_friends }} mutual friends</p>
@@ -50,5 +23,4 @@
       {% endfor %}
     </div>
   </div>
-</body>
-</html>
+{% endblock %}
