--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,11 +10,16 @@
     <div class="profiles-container">
       {% for user in users %}
         <div class="profile">
-          <img class="pfp"
-               src="{{ url_for('static', filename='profile_pics/' + (user.profile_picture or 'default.png')) }}"
-               alt="{{ user.username }}">
-
-          <p class="name">{{ user.username }}</p>
+          <a href="{{ url_for('profile.view_profile', username=user.username) }}">
+            <img class="pfp"
+                 src="{{ url_for('static', filename='profile_pics/' + (user.profile_picture or 'default.png')) }}"
+                 alt="{{ user.username }}">
+          </a>
+      
+          <a href="{{ url_for('profile.view_profile', username=user.username) }}">
+            <p class="name">{{ user.username }}</p>
+          </a>
+          
           <p class="mutual-friends">{{ user.mutual_friends }} mutual friends</p>
           <button class="add-friend">Add Friend</button>
         </div>
